--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -104,7 +104,7 @@
 .card_player {
   position: relative;
   margin: 10px 0;
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 10px;
   box-shadow: 0 0 30px rgba(200, 200, 200, 0.7);
   background: linear-gradient(-238deg, $orange 12%, white 12%, white 80%);
