display none online class when first arrive on page joueurs

--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -82,7 +82,7 @@
 
 
   <!-- classement online -->
-  <div class="online_classement">
+  <div class="online_classement d-none">
     <% @players_online.each_with_index do |player, index| %>
       <div class="card_player d-flex justify-content-around align-items-center">
         <!-- 1.1 -->
